syntax = "proto3";

package btc_canister;

import "bitcoin/v1/bitcoin.proto";

enum Network {
  BITCOIN = 0;
  TESTNET = 1;
  SIGNET = 2;
  REGTEST = 3;
}

message State {
  uint32 height = 1;
  UtxoSet utxos = 2;
  UnstableBlocks unstable_blocks = 3;
}

message UtxoSet {
  repeated Utxo utxos = 1;
  bool strict = 2;
  Network network = 3;
}

message Utxo {
  bitcoin.v1.OutPoint outpoint = 1;
  bitcoin.v1.TxOut txout = 2;
  uint32 height = 3;
}

message UnstableBlocks {
  uint64 stability_threshold = 1;
  BlockTree tree = 2;
}

message BlockTree {
  bitcoin.v1.Block root = 1;
  repeated BlockTree children = 2;
}

message BlockHeader {
  int32 version = 1;
  bytes prev_blockhash = 2;
  bytes merkle_root = 3;
  uint32 time = 4;
  uint32 bits = 5;
  uint32 nonce = 6;
}
